@@ -52,7 +52,6 @@
 \{\\tt\s*(.*?)\}||"<tt>$1</tt>"
 #
 \{\\manual\s*(.*?)\}||$1
-\{\\smc\s+(.*?)\}||$1
 
 # elide bare braces. do last since braces are part of matching above.
 \{(.*?)\}||$1
