@@ -204,7 +204,7 @@
 \capsule{}%subsub
         {Miscellaneous}
         {}
-        {Order form for {\JoT}}
+        {Order form for \textit{The Joy of \TeX}}
         {}
         {\offset{990}}
         {}
