@@ -284,7 +284,7 @@ access</a>.
   {Resources}
   {Joseph Wright}
   {Development of the \acro{UK} \TeX{} \acro{FAQ}}
-  {status and future of the \TeX\ \FAQ}
+  {status and future of the \TeX\ \acro{FAQ}}
   {105}
   {/TUGboat/!TBIDENT!wright-faq.pdf}
   {}
