@@ -175,7 +175,7 @@ access</a>.
   {\LaTeX}
   {Joseph Wright}
   {{\tt siunitx}: Past, present and future}
-  {origination, concepts, \API, and enhancements}
+  {origination, concepts, \acro{API}, and enhancements}
   {119-121}
   {/TUGboat/!TBIDENT!wright-siunitx.pdf}
   {}
