@@ -304,7 +304,7 @@ from <a href="http://walden-family.com/ieee/texhistory.html"
 \capsule{}
   {Graphics}%add|Software \& Tools
   {Eduardo Ochs}
-  {Dednat6: An extensible (semi-)preprocessor for Lua\LaTeX\ that understands diagrams in~\ASCII~art}
+  {Dednat6: An extensible (semi-)preprocessor for Lua\LaTeX\ that understands diagrams in~\acro{ASCII}~art}
   {a Forth-based language for \acro{2D} diagrams implemented in Lua}
   {241-245}
   {https://www.tug.org/members/TUGboat/!TBIDENT!ochs-dednat.pdf}
