@@ -304,7 +304,7 @@
 \capsule{}%subsec
         {Site Reports}
         {Adrian~F.~Clark}
-        {Enhancements to \TeX\ on the \VAX}
+        {Enhancements to \TeX\ on the {\VAX}}
         {}
         {177-177}
         {/TUGboat/tb08-2/tb18site.pdf}
