@@ -323,7 +323,7 @@ More honors for Knuth}
 \capsule{}%subsec
         {Typesetting on PCs}
         {Kim~Kubik}
-        {Amiga{\TeX}\dots or How envy was resisted and knowledge found on the road to \"O\"o\c c}
+        {Amiga{\TeX}\dots or How envy was resisted and knowledge found on the road to \"O\"o\c{c}}
         {}
         {65-67}
         {/TUGboat/tb10-1/tb23kubik.pdf}
