@@ -39,7 +39,7 @@
         {426-427}
         {/TUGboat/tb15-4/tb45beet.pdf}
         {{\TeX} meetings in 1994;\\
-{A} new, expanded {\TeX} {FAQ};\\
+{A} new, expanded {\TeX} \acro{FAQ};\\
 {\tt UKTeX Digest} ceases to exist;\\
 {Miscellaneous} gossip}
 	{}
@@ -51,10 +51,7 @@
         {}
         {427-428}
         {/TUGboat/tb15-4/tb45goos.pdf}
-        {TeX meetings in 1994\\
-A new, expanded TeX FAQ\\
-UKTeX Digest ceases to exist\\
-Miscellaneous gossip}
+        {}
         {}
 
 \capsule{}%subsec
