@@ -173,7 +173,7 @@ Thanks to DANTE}
 \capsule{}%subsec
         {{\TeX} Live CD-ROM}
         {Sebastian~Rahtz \and Michel~Goossens}
-        {The {{\TeXLive}} {Guide}, version 2}
+        {The \TeX{} Live {Guide}, version 2}
         {}
         {81-112}
         {ftp://tug.org/historic/systems/texlive/1997/tb55tlguide2.pdf}
