@@ -190,7 +190,7 @@
 \capsule{}
         {Software \& Tools}
         {Gilbert~van~den~Dobbelsteen}
-        {{Interacting  pdf\TeX{}, \acro{PERL} and \CONTEXT}}
+        {{Interacting  pdf\TeX{}, Perl and \ConTeXt}}
         {}
         {128-133}
         {/TUGboat/tb20-2/tb63dobb.pdf}
