@@ -105,7 +105,7 @@
 \capsule{}%subsec
         {Resources}
         {{\TUB{}\CONNECT{}Team}}
-        {{\TeXLive{} 5 and the \TeX{} Catalogue}}
+        {\TeX{} Live 5 and the \TeX{} Catalogue}
         {}
         {16-16}
         {/TUGboat/tb21-1/tb66cd.pdf}
