@@ -329,7 +329,7 @@ access</a>.
   {Software \& Tools}
   {Barry MacKichan}
   {Design decisions for a structured front end to \LaTeX}
-  {\XML, \XSLT, OpenType, and more as a basis for \TeX\ development}
+  {\XML, \acro{XSLT}, OpenType, and more as a basis for \TeX\ development}
   {335}
   {/TUGboat/tb28-3/tb90mackichan.pdf}
   {}
