@@ -251,7 +251,7 @@ access</a>.
   {Graphics}
   {Manjusha Joshi}
   {Smart ways of drawing \acro{PST}ricks\ figures}
-  {using \GUI\ programs with \acro{PST}ricks for geometric figures}
+  {using \acro{GUI} programs with \acro{PST}ricks for geometric figures}
   {444}
   {/TUGboat/!TBIDENT!joshi-pstricks.pdf}
   {}
