@@ -471,7 +471,7 @@ access</a>.
 \capsule{}
   {Electronic Documents}
   {D. P. Story}
-  {Rich media annotations and {\AcroFLeX}}
+  {Rich media annotations and Acro\acro{FL}eX}
   {multimedia support in \PDF\ via Acrobat and \LaTeX}
   {281}
   {/TUGboat/!TBIDENT!story.pdf}
